2010-03-23  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: TimelinePanel stays in the recording state after reopening WebInspector.
        https://bugs.webkit.org/show_bug.cgi?id=36503

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::detach):

2010-03-22  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Add GraphicsContext3D abstraction to WebKit API
        https://bugs.webkit.org/show_bug.cgi?id=36262

        Added WebGraphicsContext3D to the WebKit API and refactored Chromium's
        GraphicsContext3D implementation to use it. All of the OpenGL calls have
        been moved out of WebKit/chromium/src/GraphicsContext3D.cpp and into the
        WebGraphicsContext3D implementation. GraphicsContext3D is still
        responsible for the transfer of rendered output from the
        WebGraphicsContext3D to the HTMLCanvasElement.

        The GraphicsContext3DInternal class, which is a data member of
        GraphicsContext3D for the Chromium port, remains. It is possible to
        eliminate this class and thereby one level of delegation, but this is
        being deferred.

        The needed entry point for a Chrome implementation of
        WebGraphicsContext3D has been added to WebKitClient, but it is not being
        called yet by GraphicsContext3D. It will be once this patch lands and
        Chromium is rolled forward to support this entry point.

        This is a large patch, but the transformation is almost entirely
        mechanical and there is no change in functionality. Nearly all of
        GraphicsContext3D and GraphicsContext3DInternal has been moved to
        WebGraphicsContext3DDefaultImpl. The only area where the splitting of
        logic is less than mechanical is GraphicsContext3D::beginPaint() and its
        callees.

        Ran all WebGL layout tests and demos from Khronos site in Chromium
        on Mac and Windows.
